Closed Bug 285348 Opened 21 years ago Closed 21 years ago

Columns do not fully render on first load (even when loading from cache)

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Waldo, Assigned: roc)

References

()

Details

(Keywords: css3)

Attachments

(3 files)

When I view the testcase, the text after "but I don't deny that" isn't displayed until we get to "Then Jesus said to", which is at the top of a column. It's possible to get things to show a little better, however, by having Find as You Type enabled and typing one letter. Layout reflows, and while more content's displayed, some that had been displayed before is no longer displayed. I'm creating a testcase now, but I don't know how minimal it'll get as it seems to me that the length of the content may play a factor in demonstrating the bug. Also, this probably needs to be redirected to another component, but I didn't know which was best.
When loaded, this testcase displays one line consisting of partial content from three columns. Activating Find as You Type and hitting a key will cause a reflow, and a whole bunch of missing text will reappear. The initial bit of code that I removed that stimulated this massive loss of display was: <p class="posted">Posted by roc at March 8, 2005 09:08 PM</p> I've got another testcase coming up which displays the original problem I found. (These problems are similar enough that I think they might be the same bug, hence why I'm reporting here and not elsewhere.)
This testcase seemingly displays correctly, but for me when I load it there's content missing between the end of the second column and the start of the third column. One interesting thing to note: find the following lines in the testcase source: .content { padding: 15px 15px 5px 15px; background-color: #FFFFFF; color: #666666; font-family: Verdana, Arial, sans-serif; font-size: small; } When I comment out the color/font-family lines, the rendering returns to normal (or so it appears at a glance). This was all observed with a home build. My user agent string is as follows: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050307 Firefox/1.0+
Comment on attachment 176793 [details] Testcase - bits of content missing at end of second column Oops, forgive my little blunder -- I forgot to uncomment the color/font-family lines before posting the attachment, so you'll have to make that change manually. Sorry for making people do a little extra work...
Assignee: nobody → roc
Part of the problem here is that in this version of the blog, I accidentally had the columns tag appearing twice.
Attached patch fix — — Splinter Review
Yeah. It's a nested columns problem (or could also show up in dynamic reflow of columns breaking across pages). Here's the fix. Basically we need to make sure that when we reflow a column set that's not complete (i.e. hits a page break or outer column break before we finish reflowing all the content in the columns), we mark the first column of any existing continuation as dirty, and make sure it doesn't get skipped when we reflow the column set's continuation.
Attachment #179021 - Flags: superreview?(dbaron)
Attachment #179021 - Flags: review?(dbaron)
Attachment #179021 - Flags: superreview?(dbaron)
Attachment #179021 - Flags: superreview+
Attachment #179021 - Flags: review?(dbaron)
Attachment #179021 - Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: